--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -18,28 +18,28 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://assets/sounds/Background Music for Visual Novels vol.1/acoustic chill.mp3")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Tests/", "res://Tests/Unit/", "res://scenes/", "res://assets/", "res://assets/ui/", "res://assets/sounds/", "res://assets/sounds/Background Music for Visual Novels vol.1/", "res://addons/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Tests/Unit/", "res://assets/", "res://assets/sounds/", "res://assets/sounds/Background Music for Visual Novels vol.1/", "res://addons/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/level_1.tscn", "res://scenes/startbar.tscn", "res://scenes/starparticle.tscn")
-current_scene="res://scenes/level_1.tscn"
+open_scenes=PackedStringArray("res://scenes/level_1.tscn", "res://scenes/startbar.tscn", "res://scenes/starparticle.tscn", "res://scenes/main_menu.tscn", "res://scenes/level_selection.tscn")
+current_scene="res://scenes/main_menu.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Tests/Unit/glossary_resource_test.gd", "res://Tests/Unit/guess_special_resource_test.gd", "res://scenes/level_1.gd", "res://scenes/starparticle.gd", "res://scenes/startbar.gd", "res://Tests/Unit/subsystem_history_test.gd", "res://scenes/test.gd"]
-selected_script="res://scenes/level_1.gd"
-open_help=[]
+open_scripts=["res://globals.gd", "res://scenes/level_1.gd", "res://scenes/level_selection.gd", "res://scenes/main_menu.gd", "res://scenes/starparticle.gd", "res://scenes/startbar.gd"]
+selected_script="res://scenes/main_menu.gd"
+open_help=["AudioStreamPlayer"]
 script_split_offset=70
 list_split_offset=0
-zoom_factor=0.941176
+zoom_factor=1.05882
 
 [ShaderEditor]
 
